collapse expand on hobby page + expand collapse state in redux + sub cat link in /hobby + UI for phone prefix in listing and profile contact modal + image streching issue on search page

--- a/src/pages/search/styles.module.css
+++ b/src/pages/search/styles.module.css
@@ -141,6 +141,7 @@
   height: 64px;
   border-radius: 4px;
   border: 1px solid #8064a2;
+  object-fit: cover;
 }
 
 .userDetails {
